--- a/test-one-email.yaml
+++ b/test-one-email.yaml
@@ -1,7 +1,16 @@
 - hosts: GNCASNHL07926,GNCASNHL07927
   gather_facts: false
   tasks:
-    - shell: hostname
+    - shell: |
+        #!/bin/bash
+        domain_home=$(cat /tmp/ps.txt |grep nodemanager | grep -o "Dweblogic.RootDirectory=.*" | cut -d "=" -f 2 | sed 's/ -.*//g' | grep /)
+        config_xml=$(cat "$domain_home"/config/config.xml)
+        jdbc_xml=$(cat "$domain_home"/config/jdbc/*jdbc*.xml)
+        domain_version=$(echo "$config_xml" | grep -oE '<domain-version>[^<]+</domain-version>' | sed -E 's/<\/?domain-version>//g')
+        machines=$(echo "$config_xml" | grep -o '<machine>[^<]*</machine>' | sed -E 's/<machine>([^<]+)<\/machine>/\1/' | awk '!seen[$0]++' | grep -vE '^ *$' | tr '\n' ',' | sed 's/,$//')
+        datasources=$(echo "$jdbc_xml" | grep -o '<url>[^<]*</url>' | grep jdbc | sed -E 's/<url>([^<]+)<\/url>/\1/' | awk '!seen[$0]++' | grep -vE '^ *$' | tr '\n' ',' | sed 's/,$//')
+        output="$(hostname),$domain_version,\"$machines\",\"$datasources\""
+        echo "$header$output"
       register: weblogic_scraping
       changed_when: false
     - name: Enviar e-mail com o relatório
