--- a/test-one-email.yaml
+++ b/test-one-email.yaml
@@ -28,3 +28,4 @@
           {{ hostvars[host]['weblogic_scraping'].stdout }}
           {% endfor %}
       run_once: yes
+      delegate_to: localhost
