--- a/test-one-email.yaml
+++ b/test-one-email.yaml
@@ -4,7 +4,7 @@
   tasks:
     - name: Adding localhost
       add_host:
-        hostname: "{{ item }}.wt.getnet.local"
+        hostname: "{{ item }}"
         groups: weblogic
       loop: "{{ guestname }}"
 - hosts: weblogic
