--- a/test-one-email.yaml
+++ b/test-one-email.yaml
@@ -4,7 +4,7 @@
   tasks:
     - name: Adding localhost
       add_host:
-        hostname: "{{ item }}"
+        hostname: "{{ item }}.wt.getnet.local"
         groups: weblogic
       loop: "{{ guestname }}"
 - hosts: weblogic
@@ -36,5 +36,27 @@
           {% for host in ansible_play_hosts %}
           {{ hostvars[host]['weblogic_scraping'].stdout }}
           {% endfor %}
+      run_once: yes
+      delegate_to: localhost
+
+    - name: Obter o hostname GNCASNHL07927
+      shell: hostname
+      register: output
+      run_once: yes
+
+    - name: Exibir o valor obtido GNCASNHL07927
+      debug:
+        var: output.stdout
+      run_once: yes
+
+    - name: Obter o hostname localhost
+      shell: hostname
+      register: output
+      run_once: yes
+      delegate_to: localhost
+
+    - name: Exibir o valor obtido localhost
+      debug:
+        var: output.stdout
       run_once: yes
       delegate_to: localhost
