--- a/weblogic-scraping.yaml
+++ b/weblogic-scraping.yaml
@@ -1,45 +1,51 @@
 ---
-- name: gather data
-  hosts: GNCASNHL07926, GNCASNHL07927
+- hosts: localhost
   gather_facts: false
   tasks:
-
-  - name: Command to check systems for ead only mounts
-    shell: >
-      if grep "[[:space:]]ro[[:space:],]" /proc/mounts |
-        grep -v tmpfs > /dev/null ; then
-      echo 'read-only-FS';else echo 'all_good'; fi
-    register: read_only_check
-
-  - name: Get the output of `hostname`
-    command: hostname
-    register: host_name
-
-- name: email report
-  hosts: localhost
+    - name: Adding localhost
+      add_host:
+        hostname: "{{ item }}"
+        groups: weblogic
+      loop: "{{ guestname }}"
+- hosts: weblogic
   gather_facts: false
-  vars:
-    hosts_pattern: linux_systems
   tasks:
+    - shell: |
+        #!/bin/bash
+        domain_home=$(cat /tmp/ps.txt | grep nodemanager | grep -o "Dweblogic.RootDirectory=.*" | cut -d "=" -f 2 | sed 's/ -.*//g' | grep /)
+        config_xml=$(cat "$domain_home"/config/config.xml)
+        jdbc_xml=$(cat "$domain_home"/config/jdbc/*jdbc*.xml)
+        domain_version=$(echo "$config_xml" | grep -oE '<domain-version>[^<]+</domain-version>' | sed -E 's/<\/?domain-version>//g')
+        machines=$(echo "$config_xml" | grep -o '<machine>[^<]*</machine>' | sed -E 's/<machine>([^<]+)<\/machine>/\1/' | awk '!seen[$0]++' | grep -vE '^ *$' | tr '\n' ',' | sed 's/,$//' | sed 's/,/, /g')
+        datasources=$(echo "$jdbc_xml" | grep -o '<url>[^<]*</url>' | grep jdbc | sed -E 's/<url>([^<]+)<\/url>/\1/' | awk '!seen[$0]++' | grep -vE '^ *$' | tr '\n' ',' | sed 's/,$//' | sed 's/,/, /g')
+        output="$(cat /etc/hostname),$domain_version,\"$machines\",\"$datasources\""
+        echo "$header$output"
+      register: weblogic_scraping
+      changed_when: false
 
-  - name: Email report of systems with read only filesystems
-    mail:
-      host: smtp.gmail.com
-      port: 587
-      username: david.sf026@gmail.com
-      password: "{{ smtppwd }}"
-      from: david.sf026@gmail.com
-      to: david.sf026@gmail.com
-      subject: "[Read-Only FS] Testing Mail"
-      body: |
-        Report from playbook check_readonly_filesystems.
+    - name: Exibir nos logs os dados obtidos
+      debug:
+        msg: |
+          HOST,DOMAIN-VERSION,MACHINES,DATASOURCES
+          {% for host in ansible_play_hosts %}
+          {{ hostvars[host]['weblogic_scraping'].stdout }}
+          {% endfor %}
+      run_once: yes
+      delegate_to: localhost
 
-        {% for host_item in lookup('inventory_hostnames', hosts_pattern, wantlist=True) %}
-        {% if hostvars[host_item]['read_only_check'] is defined and
-              hostvars[host_item]['read_only_check'].stdout is defined and
-              hostvars[host_item]['read_only_check'].stdout == "read-only-FS" %}
-        Read only - {{ hostvars[host_item]['inventory_hostname'] }} aka {{ hostvars[host_item]['host_name'].stdout }}
-        {% else %}
-        Good host - {{ hostvars[host_item]['inventory_hostname'] }} aka {{ hostvars[host_item]['host_name'].stdout }}
-        {% endif %}
-        {% endfor %}
+    - name: Enviar e-mail com o relatório
+      mail:
+        host: smtp.gmail.com
+        port: 587
+        username: david.sf026@gmail.com
+        password: "{{ smtppwd }}"
+        from: david.sf026@gmail.com
+        to: david.sf026@gmail.com
+        subject: Planilha Coleta de Dados Hosts WebLogic
+        body: |
+          HOST,DOMAIN-VERSION,MACHINES,DATASOURCES
+          {% for host in ansible_play_hosts %}
+          {{ hostvars[host]['weblogic_scraping'].stdout }}
+          {% endfor %}
+      run_once: yes
+      delegate_to: localhost
