--- a/weblogic-scraping.yaml
+++ b/weblogic-scraping.yaml
@@ -12,7 +12,7 @@
   tasks:
     - shell: |
         #!/bin/bash
-        hostname=$(hostname)
+        hostname=$(cat /etc/hostname)
         domain_home=$(cat /tmp/ps.txt | grep nodemanager | grep -o "Dweblogic.RootDirectory=.*" | cut -d "=" -f 2 | sed 's/ -.*//g' | grep /)
         config_xml=$(cat "$domain_home"/config/config.xml)
         jdbc_xml=$(cat "$domain_home"/config/jdbc/*jdbc*.xml)
