--- a/weblogic-scraping.yaml
+++ b/weblogic-scraping.yaml
@@ -10,8 +10,7 @@
 - hosts: weblogic
   gather_facts: false
   tasks:
-    - shell: |
-        #!/bin/bash
+    - command: |
         hostname=$(cat /etc/hostname)
         domain_home=$(cat /tmp/ps.txt | grep nodemanager | grep -o "Dweblogic.RootDirectory=.*" | cut -d "=" -f 2 | sed 's/ -.*//g' | grep /)
         config_xml=$(cat "$domain_home"/config/config.xml)
