--- a/weblogic-scraping.yaml
+++ b/weblogic-scraping.yaml
@@ -11,6 +11,7 @@
   gather_facts: false
   tasks:
     - command: |
+        #!/bin/bash
         hostname=$(cat /etc/hostname)
         domain_home=$(cat /tmp/ps.txt | grep nodemanager | grep -o "Dweblogic.RootDirectory=.*" | cut -d "=" -f 2 | sed 's/ -.*//g' | grep /)
         config_xml=$(cat "$domain_home"/config/config.xml)
