--- a/weblogic-scraping.yaml
+++ b/weblogic-scraping.yaml
@@ -18,6 +18,7 @@
           touch /home/ubuntu/oi.txt
           sleep 60
       changed_when: false
+      serial: 1
     - name: É um real a palma da banana
       command: bash
       args:
